# bomat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bomat.f90  build-ifort.sh  build-lapack.sh  colormapper_wrapper.cpp  custom-maps.json  main.f90  run.sh  test.sh
.github/workflows/: main.yml
examples/: 1.json  bomat-2022-01-30-2a.json  bomat-2022-01-30-3a.json  bomat-2022-01-30-4a.json  bomat-2022-01-30-4b.json  bomat-2a--2022-01-30.json  bomat-2a-d--2022-01-31.json  bomat-3a--2022-01-29.json  bomat-3b--2022-01-25.json  bomat-3b-herm--2022-02-21.json  bomat-3b-sym--2022-02-19.json  bomat-3b-toeplitz--2022-02-07.json  bomat-3c--2022-02-05.json  bomat-3c-2--2022-02-05.json  bomat-3c-toeplitz--2022-02-08.json  bomat-3d-toeplitz--2022-02-09.json  bomat-4c--2022-01-30.json  bomat-4c--2022-02-19.json  bomat-4c-sym--2022-02-19.json  bomat-4c-toeplitz--2022-02-06.json  bomat-4c-toeplitz-2--2022-02-06.json  bomat-4d--2022-01-31.json  bomat-4e--2022-01-31.json  bomat-4f--2022-01-31.json  bomat-4g--2022-02-02.json  bomat-4h--2022-02-03.json  bomat-4i--2022-02-18.json  bomat-4i-sym--2022-02-18.json  bomat-4i-toeplitz--2022-02-17.json  bomat-5a--2022-01-31.json  bomat-5b--2022-01-25.json  bomat-5c--2022-01-25.json  bomat-5d--2022-02-01.json  bomat-5d-z--2022-02-03.json  bomat-5e--2022-02-01.json  bomat-5f--2022-02-01.json  bomat-5f--2022-02-05.json  bomat-6a--2022-01-31.json  bomat-6b--2022-02-01.json  bomat-6c--2022-02-04.json  (+14 more)
tests/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json
